--- a/index.html
+++ b/index.html
@@ -8,14 +8,42 @@
 		<link rel="stylesheet" href="owlcarousel/owl.carousel.min.css" />
 		<link rel="stylesheet" href="owlcarousel/owl.theme.default.min.css" />
 		<link rel="stylesheet" href="style.css" />
-
-		<title>WORDPRESS primer</title>
+		<title>Radionica</title>
 	</head>
 	<body>
 		<!-- NAV -->
+		<nav>
+			<a href="#">Photo Agency</a>
+
+			<div class="drop_down">
+				<a href="#" class="link">Home</a>
+				<a href="#" class="link">Services</a>
+				<a href="#" class="link">About us</a>
+			</div>
+
+			<div class="burger">
+				<span></span>
+				<span></span>
+				<span></span>
+			</div>
+		</nav>
+
 		<!-- HEADER -->
+		<header id="home">
+			<hgroup>
+				<h3>Friendly</h3>
+				<h1>Best photo agency</h1>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum labore
+					velit quos officiis possimus delectus ipsam incidunt modi doloremque
+					cumque amet dolores, iusto temporibus aut?
+				</p>
+				<a href="#" class="btn btn-info">Read More</a>
+			</hgroup>
+		</header>
 
 		<!-- SERVICES -->
+
 		<!-- FOOTER -->
 
 		<script
