--- a/index.html
+++ b/index.html
@@ -30,20 +30,77 @@
 
 		<!-- HEADER -->
 		<header id="home">
-			<hgroup>
-				<h3>Friendly</h3>
-				<h1>Best photo agency</h1>
-				<p>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum labore
-					velit quos officiis possimus delectus ipsam incidunt modi doloremque
-					cumque amet dolores, iusto temporibus aut?
-				</p>
-				<a href="#" class="btn btn-info">Read More</a>
-			</hgroup>
+			<div class="container-fluid">
+				<hgroup>
+					<h3>Friendly</h3>
+					<h1>Best photo agency</h1>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum
+						labore velit quos officiis possimus delectus ipsam incidunt modi
+						doloremque cumque amet dolores, iusto temporibus aut?
+					</p>
+					<a href="#" class="btn btn-info">Read More</a>
+				</hgroup>
+			</div>
 		</header>
 
 		<!-- SERVICES -->
+		<section id="services">
+			<div class="container">
+				<hgroup class="service-header">
+					<h2>Our creative services</h2>
+					<h3 class="accents">For every occasion</h3>
+				</hgroup>
 
+				<div class="service-wrapper">
+					<div class="owl-carousel owl-theme">
+						<div class="item">
+							<img src="img/item1.jpg" alt="" />
+							<div class="hover-pop">
+								<h3>Event photo</h3>
+								<p>
+									Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+									Consequatur, maiores.
+								</p>
+							</div>
+						</div>
+
+						<div class="item">
+							<img src="img/item2.jpg" alt="" />
+							<div class="hover-pop">
+								<h3>Event photo</h3>
+								<p>
+									Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+									Consequatur, maiores.
+								</p>
+							</div>
+						</div>
+
+						<div class="item">
+							<img src="img/item3.jpg" alt="" />
+							<div class="hover-pop">
+								<h3>Event photo</h3>
+								<p>
+									Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+									Consequatur, maiores.
+								</p>
+							</div>
+						</div>
+
+						<div class="item">
+							<img src="img/item4.jpg" alt="" />
+							<div class="hover-pop">
+								<h3>Event photo</h3>
+								<p>
+									Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+									Consequatur, maiores.
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 		<!-- FOOTER -->
 
 		<script
